--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.nityananda_barbosa.finished_games_register">
+    package="com.nityanandabarbosa.finished_games_register">
    <application
-        android:label="register_of_finished_games"
+        android:label="finished_games_register"
         android:icon="@mipmap/ic_launcher">
         <activity
             android:name=".MainActivity"
