--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,6 +24,7 @@ dependencies:
   flutter_mobx: ^2.0.0
   mobx: ^2.0.1
   firebase_core: ^1.0.3
+  asuka: ^1.0.4
   firebase_auth: ^1.0.2
   flutter_modular: ^3.2.2+1
   flutter:
